# murmur

./: .gitignore  LICENSE  README.md  SETUP_WITH_AI.md  config.toml.example  corrections.txt.example  daemon.py  dictation-pause  dictation-resume  dictation-toggle  doctor  gui.py  install.sh  mouse-trigger.py  murmur  murmur.desktop  pyproject.toml  run-daemon.sh  setup  vocab.txt.example  watch-games.sh
systemd/: murmur-gamewatch.service  murmur-mouse.service  murmur.service
